--- a/_data/content.yml
+++ b/_data/content.yml
@@ -24,16 +24,17 @@ rss_link: #
 #     transcript_file: 
 
 events:
-  - name: "Sound Education"
-    when: "11/2 + 11/3"
-    where: "Cambridge, MA"
-    url: "https://www.soundeducation.fm/"
-  - name: "Werk It 2018: A Women's Podcast Festival"
-    when: "11/13 + 11/14"
-    where: "Knockdown Center, NYC"
-    url: "https://www.werkitfestival.com/#2018-register"
   - name: "NY Tech Zine Fair"
     when: "12/1"
     where: "School for Poetic Computation, 155 Bank St. NYC"
     url: "http://techzinefair.org/"
- 
+    
+past_events:
+  - name: "Werk It 2018: A Women's Podcast Festival"
+    when: "11/13 + 11/14"
+    where: "Knockdown Center, NYC"
+    url: "https://www.werkitfestival.com/#2018-register"
+  - name: "Sound Education"
+    when: "11/2 + 11/3"
+    where: "Cambridge, MA"
+    url: "https://www.soundeducation.fm/"
