--- a/_data/content.yml
+++ b/_data/content.yml
@@ -32,6 +32,12 @@ events:
     when: "6/20 - 6/25/2019"
     where: "Washington, D.C."
     url: "http://www.ala.org/conferencesevents/annual-conference"
+  - name: "Preserve This Podcast Launch Party"
+    when: "3/21/2019"
+    where: "METRO 599 11th Ave, NYC"
+  - name: "Preserve Your Podcast Workshop"
+    when: "3/22/2019"
+    where: "METRO 599 11th Ave, NYC"
     
 past_events:
   - name: "Werk It 2018: A Women's Podcast Festival"
