--- a/_data/content.yml
+++ b/_data/content.yml
@@ -1,7 +1,7 @@
 google_analytics: UA-XXXXX-Y
 
 zine_link: #
-survey_link: https://www.surveymonkey.com/r/28ZYRF5
+survey_link: #
 twitter_link: https://twitter.com/preservethispod
 
 applepodcasts_link: #
