--- a/_data/content.yml
+++ b/_data/content.yml
@@ -1,6 +1,6 @@
 google_analytics: UA-XXXXX-Y
 
-zine_link: #
+zine_link: #/assets/PreserveThisPodcastZINE_online.pdf
 survey_link: #
 twitter_link: https://twitter.com/preservethispod
 
