test zine print version link

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -1,6 +1,7 @@
 google_analytics: UA-XXXXX-Y
 
 zine_link: /assets/PreserveThisPodcast_Zine_Online.pdf
+zinePrint_link: /assets/PreserveThisPodcast_Zine_Print-compressed.pdf
 survey_link: #
 twitter_link: https://twitter.com/preservethispod
 
