--- a/_data/content.yml
+++ b/_data/content.yml
@@ -25,18 +25,26 @@ rss_link: #
 #     transcript_file: 
 
 events:
+  - name: "On Air Fest"
+    when: "3/2/2019"
+    where: "Wythe Hotel, Brooklyn, NY"
+    url: "http://onairfest.com/"
+  - name: "Launch Party!"
+    when: "3/21/2019"
+    where: "METRO 599 11th Ave, NYC"
+  - name: "Preserve Your Podcast Workshop"
+    when: "3/22/2019"
+    where: "METRO 599 11th Ave, NYC"
+  - name: "The Center for Investigative Reporting Workshop"
+    when: "5/11/2019"
+    where: "Emeryville, CA"
   - name: "ALA Annual Conference"
     when: "6/20 - 6/25/2019"
     where: "Washington, D.C."
     url: "http://www.ala.org/conferencesevents/annual-conference"
-  - name: "Launch Party!"
-    when: "3/21/2019"
-    where: "METRO 599 11th Ave, NYC"
-    url: "http://preservethispodcast.org/404tba.html"
-  - name: "Preserve Your Podcast Workshop"
-    when: "3/22/2019"
-    where: "METRO 599 11th Ave, NYC"
-    url: "http://preservethispodcast.org/404tba.html"
+  - name: "Center for Documentary Studies Workshop"
+    when: "9/14/2019"
+    where: "Durham, NC"
     
 past_events:
   - name: "NY Tech Zine Fair"
