update launch party URL

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -29,9 +29,10 @@ events:
     when: "3/2/2019"
     where: "Wythe Hotel, Brooklyn, NY"
     url: "http://onairfest.com/"
-  - name: "Launch Party!"
+  - name: "Who saves our stories for the future? A Preserve This Podcast Launch Party!"
     when: "3/21/2019"
     where: "METRO 599 11th Ave, NYC"
+    url: "https://www.eventbrite.com/e/who-saves-our-stories-for-the-future-a-preserve-this-podcast-launch-party-tickets-55237924118"
   - name: "Preserve Your Podcast Workshop"
     when: "3/22/2019"
     where: "METRO 599 11th Ave, NYC"
