--- a/_data/content.yml
+++ b/_data/content.yml
@@ -36,7 +36,7 @@ events:
   - name: "Preserve Your Podcast Workshop"
     when: "3/22/2019"
     where: "METRO 599 11th Ave, NYC"
-    url: "http://preservethispodcast.org/404tba.html"
+    url: "https://www.eventbrite.com/e/its-the-year-2039-wheres-your-podcast-a-preserve-this-podcast-workshop-tickets-55599690170"
   - name: "The Center for Investigative Reporting Workshop"
     when: "5/11/2019"
     where: "Emeryville, CA"
