--- a/_data/content.yml
+++ b/_data/content.yml
@@ -2,7 +2,7 @@ google_analytics: UA-XXXXX-Y
 
 zine_link: /assets/PreserveThisPodcast_Zine_Online.pdf
 zinePrint_link: /assets/PreserveThisPodcast_Zine_Print.pdf
-survey_link: /#zine
+survey_link: /#survey
 twitter_link: https://twitter.com/preservethispod
 
 applepodcasts_link: #
