add rhizome dc event

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -45,6 +45,10 @@ events:
     when: "6/20 - 6/25/2019"
     where: "Washington, D.C."
     url: "http://www.ala.org/conferencesevents/annual-conference"
+  - name: "Rhizome DC"
+    when: "6/23/2019"
+    where: "Washington, D.C."
+    url: "http://preservethispodcast.org/404tba.html"
   - name: "Center for Documentary Studies Workshop"
     when: "9/14/2019"
     where: "Durham, NC"
