--- a/_config.yml
+++ b/_config.yml
@@ -23,3 +23,13 @@ exclude:
 plugins_dir:
   - jekyll-feed
   - jekyll-sitemap
+
+# Podcast Feed Settings
+title:          Preserve-This-Podcast
+email:          podcast@metro.org 
+description:    "Preserve This Podcast is an Andrew W. Mellon grant-funded project hosted by the Metropolitan New York Library Council (METRO) to help podcasters protect their work against the threats of digital decay."
+subtitle:       "A podcast about saving your podcast."
+url:            your-podcast-url
+lang:           Eng
+author:         podPotato
+copyright:      "CC BY 4.0"
