--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ title:          Preserve-This-Podcast
 email:          podcast@metro.org 
 description:    "Preserve This Podcast is an Andrew W. Mellon grant-funded project hosted by the Metropolitan New York Library Council (METRO) to help podcasters protect their work against the threats of digital decay."
 subtitle:       "A podcast about saving your podcast."
-url:            your-podcast-url
+url:            http://preservethispodcast.org
 lang:           Eng
 author:         podPotato
 copyright:      "CC BY 4.0"
