--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ collections:
   episodes:
 
 # Podcast Feed Settings
-title:          Preserve-This-Podcast
+title:          Preserve This Podcast
 email:          podcast@metro.org 
 description:    "Preserve This Podcast is an Andrew W. Mellon grant-funded project hosted by the Metropolitan New York Library Council (METRO) to help podcasters protect their work against the threats of digital decay."
 subtitle:       "A podcast about saving your podcast."
