update download link to ia

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -14,7 +14,7 @@ rss_link: http://preservethispodcast.org/podcast.rss
 episodes:
   - name: Prologue—Podcasts are Disappearing
     embed_link: https://embed.radiopublic.com/e?if=preserve-this-podcast-WDJY3A&ge=s1!f8e4e63fe6cd7c55e2102b378758668d8d766f58
-    download_link: https://dts.podtrac.com/redirect.mp3/dovetail.prxu.org/song-exploder/b0fe9fa2-8522-4976-8717-4338844a93f7/SongExploder61_CourtneyBarnett_Reissue_DT.mp3
+    download_link: https://ia801508.us.archive.org/17/items/PreserveThisPodcast-prologue-podcasts-are-disappearing/PTP_Prologue_MIX_-16LUFS_190206.mp3
     exercises_link: 
     transcript_file: transcript-00prologue
  
