update rss_link to simplecast
change to preservethispodcast.org/podcast.rss when simplecast subscription closes

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -9,7 +9,7 @@ applepodcasts_link: https://itunes.apple.com/us/podcast/preserve-this-podcast/id
 googlepodcasts_link: #
 stitcher_link: #
 radiopublic_link: https://radiopublic.com/preserve-this-podcast-WDJY3A 
-rss_link: http://preservethispodcast.org/podcast.rss
+rss_link: https://rss.simplecast.com/podcasts/10324/rss
 
 episodes:
   - name: Prologue—Podcasts are Disappearing
