--- a/_data/content.yml
+++ b/_data/content.yml
@@ -14,7 +14,7 @@ rss_link: https://rss.simplecast.com/podcasts/10324/rss
 episodes:
   - name: Prologue—Podcasts are Disappearing
     embed_link: https://embed.radiopublic.com/e?if=preserve-this-podcast-WDJY3A&ge=s1!f8e4e63fe6cd7c55e2102b378758668d8d766f58
-    download_link: https://ia801508.us.archive.org/17/items/PreserveThisPodcast-prologue-podcasts-are-disappearing/PTP_Prologue_MIX_-16LUFS_190206.mp3
+    download_link: https://audio.simplecast.com/33c29a99.mp3
     exercises_link: 
     transcript_file: transcript-00prologue
  
