update ptp metro wkshp title

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -33,7 +33,7 @@ events:
     when: "3/21/2019"
     where: "METRO 599 11th Ave, NYC"
     url: "https://www.eventbrite.com/e/who-saves-our-stories-for-the-future-a-preserve-this-podcast-launch-party-tickets-55237924118"
-  - name: "Preserve Your Podcast Workshop"
+  - name: "It's the year 2039. Where's your podcast? (A Preserve This Podcast workshop)"
     when: "3/22/2019"
     where: "METRO 599 11th Ave, NYC"
     url: "https://www.eventbrite.com/e/its-the-year-2039-wheres-your-podcast-a-preserve-this-podcast-workshop-tickets-55599690170"
