--- a/_data/content.yml
+++ b/_data/content.yml
@@ -8,7 +8,7 @@ twitter_link: https://twitter.com/preservethispod
 applepodcasts_link: https://itunes.apple.com/us/podcast/preserve-this-podcast/id1451896473
 googlepodcasts_link: #
 stitcher_link: https://www.stitcher.com/podcast/preserve-this-podcast?refid=stpr
-radiopublic_link: # 
+radiopublic_link: #
 rss_link: https://rss.simplecast.com/podcasts/10324/rss
 
 episodes:
@@ -46,7 +46,7 @@ events:
     where: "Austin, TX"
     url: "http://outliercs.com/"
   - name: "ALA Annual Conference"
-    when: "6/20 - 6/25/2019"
+    when: "6/22/2019"
     where: "Washington, D.C."
     url: "http://www.ala.org/conferencesevents/annual-conference"
   - name: "Rhizome DC"
