--- a/_data/content.yml
+++ b/_data/content.yml
@@ -13,7 +13,7 @@ rss_link: https://rss.simplecast.com/podcasts/10324/rss
 
 episodes:
   - name: Prologue—Podcasts are Disappearing
-    embed_link: https://embed.radiopublic.com/e?if=preserve-this-podcast-WDJY3A&ge=s1!f8e4e63fe6cd7c55e2102b378758668d8d766f58
+    embed_link: #
     download_link: https://audio.simplecast.com/33c29a99.mp3
     exercises_link:
     transcript_file: transcript-00prologue
@@ -41,12 +41,12 @@ events:
     when: "5/11/2019"
     where: "Emeryville, CA"
     url: "http://preservethispodcast.org/404tba.html"
- -  name: "Outlier Podcast Festival"
+  - name: "Outlier Podcast Festival"
     when: "5/18/2019"
     where: "Austin, TX"
     url: "http://outliercs.com/"
   - name: "ALA Annual Conference"
-    when: "6/22/2019"
+    when: "6/20 - 6/25/2019"
     where: "Washington, D.C."
     url: "http://www.ala.org/conferencesevents/annual-conference"
   - name: "Rhizome DC"
