add redirect to whitelist

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,9 @@ plugins:
   - jekyll-sitemap
   - jekyll-redirect-from
 
+whitelist:
+  - jekyll-redirect-from
+
 feed:
   collections:
     episodes:
