--- a/_data/content.yml
+++ b/_data/content.yml
@@ -8,12 +8,12 @@ twitter_link: https://twitter.com/preservethispod
 applepodcasts_link: https://itunes.apple.com/us/podcast/preserve-this-podcast/id1451896473
 googlepodcasts_link: #
 stitcher_link: https://www.stitcher.com/podcast/preserve-this-podcast?refid=stpr
-radiopublic_link: #
+radiopublic_link: https://radiopublic.com/preserve-this-podcast-GZbya9
 rss_link: https://rss.simplecast.com/podcasts/10324/rss
 
 episodes:
   - name: Prologue—Podcasts are Disappearing
-    embed_link: https://embed.simplecast.com/33c29a99?color=3d3d3d
+    embed_link: https://embed.radiopublic.com/e?if=preserve-this-podcast-GZbya9
     download_link: https://audio.simplecast.com/33c29a99.mp3
     exercises_link:
     transcript_file: transcript-00prologue
