--- a/_data/content.yml
+++ b/_data/content.yml
@@ -17,6 +17,11 @@ episodes:
     download_link: https://audio.simplecast.com/33c29a99.mp3
     exercises_link:
     transcript_file: transcript-00prologue
+ - name: 01—Time to Take Notice
+    embed_link: https://embed.radiopublic.com/e?if=preserve-this-podcast-GZbya9
+    download_link: https://audio.simplecast.com/d2e92a88.mp3
+    exercises_link: /#zine
+    transcript_file: trancript01-time-to-take-notice
 
 #   - name: Prepare your Files for Archiving
 #     embed_link: https://embed.radiopublic.com/e?if=SongExploder&ge=s1!ff980151529d68e71f286e7e49ce7142b9d23bad
@@ -29,6 +34,10 @@ events:
     when: "3/21/2019"
     where: "METRO 599 11th Ave, NYC"
     url: "https://www.eventbrite.com/e/who-saves-our-stories-for-the-future-a-preserve-this-podcast-launch-party-tickets-55237924118"
+  - name: "Who saves our stories for the future? Panel"
+    when: "3/21/2019 at 7p est"
+    where: "YouTube live stream"
+    url: "https://www.youtube.com/watch?v=mGjvtJf_SHg"
   - name: "It's the year 2039. Where's your podcast? (A Preserve This Podcast workshop)"
     when: "3/22/2019"
     where: "METRO 599 11th Ave, NYC"
