add edit events
archive launch events; add collective bargaining event, update CIR URL

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -30,22 +30,14 @@ episodes:
 #     transcript_file:
 
 events:
-  - name: "Who saves our stories for the future? A Preserve This Podcast Launch Party!"
-    when: "3/21/2019"
+  - name: "Union Power: Collective Bargaining in Podcasting"
+    when: "4/18/2019"
     where: "METRO 599 11th Ave, NYC"
-    url: "https://www.eventbrite.com/e/who-saves-our-stories-for-the-future-a-preserve-this-podcast-launch-party-tickets-55237924118"
-  - name: "Who saves our stories for the future? Panel"
-    when: "3/21/2019 at 7p est"
-    where: "YouTube live stream"
-    url: "https://www.youtube.com/watch?v=mGjvtJf_SHg"
-  - name: "It's the year 2039. Where's your podcast? (A Preserve This Podcast workshop)"
-    when: "3/22/2019"
-    where: "METRO 599 11th Ave, NYC"
-    url: "https://www.eventbrite.com/e/its-the-year-2039-wheres-your-podcast-a-preserve-this-podcast-workshop-tickets-55599690170"
+    url: "https://www.eventbrite.com/e/union-power-collective-bargaining-in-podcasting-tickets-59453992492"
   - name: "The Center for Investigative Reporting Workshop"
     when: "5/11/2019"
     where: "Emeryville, CA"
-    url: "http://preservethispodcast.org/404tba.html"
+    url: "https://www.eventbrite.com/e/its-the-year-2039-wheres-your-podcast-a-preserve-this-podcast-workshop-tickets-59465285269"
   - name: "Outlier Podcast Festival"
     when: "5/18/2019"
     where: "Austin, TX"
@@ -84,3 +76,15 @@ past_events:
     when: "3/2/2019"
     where: "Wythe Hotel, Brooklyn, NY"
     url: "http://onairfest.com/"
+  - name: "Who saves our stories for the future? A Preserve This Podcast Launch Party!"
+    when: "3/21/2019"
+    where: "METRO 599 11th Ave, NYC"
+    url: "https://www.eventbrite.com/e/who-saves-our-stories-for-the-future-a-preserve-this-podcast-launch-party-tickets-55237924118"
+  - name: "Who saves our stories for the future? Panel"
+    when: "3/21/2019 at 7p est"
+    where: "YouTube live stream"
+    url: "https://www.youtube.com/watch?v=mGjvtJf_SHg"
+  - name: "It's the year 2039. Where's your podcast? (A Preserve This Podcast workshop)"
+    when: "3/22/2019"
+    where: "METRO 599 11th Ave, NYC"
+    url: "https://www.eventbrite.com/e/its-the-year-2039-wheres-your-podcast-a-preserve-this-podcast-workshop-tickets-55599690170"
