--- a/_data/content.yml
+++ b/_data/content.yml
@@ -22,11 +22,11 @@ episodes:
     download_link: https://audio.simplecast.com/d2e92a88.mp3
     exercises_link: /#zine
     transcript_file: trancript01-time-to-take-notice
-  - name: Ep2 - Get Organized
+  - name: Ep2—Get Organized
     embed_link: 
     download_link:#https://audio.simplecast.com/c423d600.mp
     exercises_link: http://preservethispodcast.org/assets/PreserveThisPodcast_Zine_Online.pdf#page=7
-    transcript_file: transcript02_get_organized
+    transcript_file: transcript02-get-organized
 
 #   - name: Prepare your Files for Archiving
 #     embed_link: https://embed.radiopublic.com/e?if=SongExploder&ge=s1!ff980151529d68e71f286e7e49ce7142b9d23bad
