--- a/_data/content.yml
+++ b/_data/content.yml
@@ -23,8 +23,8 @@ episodes:
     exercises_link: /#zine
     transcript_file: trancript01-time-to-take-notice
   - name: Ep2 - Get Organized
-    embed_link: 
-    download_link:#https://audio.simplecast.com/c423d600.mp
+    embed_link: https://embed.radiopublic.com/e?if=preserve-this-podcast-GZbya9&ge=s1!8656cc15c4c5d699b0d9e755db6853b3efa79ee2
+    download_link: https://audio.simplecast.com/c423d600.mp3
     exercises_link: http://preservethispodcast.org/assets/PreserveThisPodcast_Zine_Online.pdf#page=7
     transcript_file: transcript02_get_organized
 
