--- a/_data/content.yml
+++ b/_data/content.yml
@@ -27,6 +27,11 @@ episodes:
     download_link: https://audio.simplecast.com/c423d600.mp3
     exercises_link: http://preservethispodcast.org/assets/PreserveThisPodcast_Zine_Online.pdf#page=5
     transcript_file: transcript02-get-organized
+  - name: Ep3—Back it up
+    Embed_link: 
+    Download_link: https://audio.simplecast.com/ef4681be.mp3
+    exercises_link: http://preservethispodcast.org/assets/PreserveThisPodcast_Zine_Online.pdf#page=10
+    transcript_file: transcripts03-back-it-up
 
 #   - name: Prepare your Files for Archiving
 #     embed_link: https://embed.radiopublic.com/e?if=SongExploder&ge=s1!ff980151529d68e71f286e7e49ce7142b9d23bad
