add jeremy events

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -52,6 +52,14 @@ events:
     when: "5/18/2019"
     where: "Austin, TX"
     url: "http://outliercs.com/"
+  - name: "Podcasts To The Rescue! An Emerging Medium for Learning About Civics, Government, and the Social Contract"
+    when: "5/30/2019"
+    where: "METRO 599 11th Ave, NYC"
+    url: "https://www.eventbrite.com/e/podcasts-to-the-rescue-an-emerging-medium-for-learning-about-civics-government-and-the-social-tickets-59456853048"
+  - name: "Who Owns Your Content? A Look at Podcaster Rights"
+    when: "6/6/2019"
+    where: "METRO 599 11th Ave, NYC"
+    url: "https://www.eventbrite.com/e/who-owns-your-content-a-look-at-podcaster-rights-tickets-59491509707"
   - name: "ALA Annual Conference"
     when: "6/20 - 6/25/2019"
     where: "Washington, D.C."
@@ -102,4 +110,3 @@ past_events:
     when: "4/12/2019"
     where: "Morgantown, WV"
     url: "https://marac2019morgantown.wordpress.com/"
-
