add pbc event, archive union event

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -40,10 +40,10 @@ episodes:
 #     transcript_file:
 
 events:
-  - name: "Union Power: Collective Bargaining in Podcasting"
-    when: "4/18/2019"
+  - name: "Podcast Brunch Club: The Evolution of Libraries"
+    when: "5/2/2019"
     where: "METRO 599 11th Ave, NYC"
-    url: "https://www.eventbrite.com/e/union-power-collective-bargaining-in-podcasting-tickets-59453992492"
+    url: "https://www.eventbrite.com/e/podcast-brunch-club-nyc-the-evolution-of-libraries-tickets-60881575431"
   - name: "The Center for Investigative Reporting Workshop"
     when: "5/11/2019"
     where: "Emeryville, CA"
@@ -110,3 +110,7 @@ past_events:
     when: "4/12/2019"
     where: "Morgantown, WV"
     url: "https://marac2019morgantown.wordpress.com/"
+  - name: "Union Power: Collective Bargaining in Podcasting"
+    when: "4/18/2019"
+    where: "METRO 599 11th Ave, NYC"
+    url: "https://www.eventbrite.com/e/union-power-collective-bargaining-in-podcasting-tickets-59453992492"
