--- a/_data/content.yml
+++ b/_data/content.yml
@@ -32,6 +32,11 @@ episodes:
     download_link: https://audio.simplecast.com/ef4681be.mp3
     exercises_link: http://preservethispodcast.org/assets/PreserveThisPodcast_Zine_Online.pdf#page=10
     transcript_file: transcript03-back-it-up
+  #- name: Ep4 Metadata Mysteries
+   # embed_link: 
+    #download_link: 
+    #exercises_link: http://preservethispodcast.org/assets/PreserveThisPodcast_Zine_Online.pdf#page=12
+    #transcript_file: transcript04-metadata-mysteries
 
 #   - name: Prepare your Files for Archiving
 #     embed_link: https://embed.radiopublic.com/e?if=SongExploder&ge=s1!ff980151529d68e71f286e7e49ce7142b9d23bad
@@ -48,6 +53,10 @@ events:
     when: "5/11/2019"
     where: "Emeryville, CA"
     url: "https://www.eventbrite.com/e/its-the-year-2039-wheres-your-podcast-a-preserve-this-podcast-workshop-tickets-59465285269"
+  - name: "University of Texas at Austin Libraries"
+    when: "5/17/2019"
+    where: "Austin, TX"
+    url: "https://www.eventbrite.com/e/its-the-year-2039-wheres-your-podcast-a-preserve-this-podcast-workshop-tickets-61124101834"
   - name: "Outlier Podcast Festival"
     when: "5/18/2019"
     where: "Austin, TX"
