--- a/_data/content.yml
+++ b/_data/content.yml
@@ -1,3 +1,4 @@
+
 google_analytics: UA-XXXXX-Y
 
 zine_link: /assets/PreserveThisPodcast_Zine_Online.pdf
@@ -32,11 +33,11 @@ episodes:
     download_link: https://audio.simplecast.com/ef4681be.mp3
     exercises_link: http://preservethispodcast.org/assets/PreserveThisPodcast_Zine_Online.pdf#page=10
     transcript_file: transcript03-back-it-up
-  #- name: Ep4 Metadata Mysteries
-   # embed_link: 
-    #download_link: 
-    #exercises_link: http://preservethispodcast.org/assets/PreserveThisPodcast_Zine_Online.pdf#page=12
-    #transcript_file: transcript04-metadata-mysteries
+  - name: Ep4—Metadata Meta-awareness
+    embed_link: 
+    download_link: https://audio.simplecast.com/71a35e18.mp3
+    exercises_link: http://preservethispodcast.org/assets/PreserveThisPodcast_Zine_Online.pdf#page=12
+    transcript_file: transcript04-metadata-meta-awareness
 
 #   - name: Prepare your Files for Archiving
 #     embed_link: https://embed.radiopublic.com/e?if=SongExploder&ge=s1!ff980151529d68e71f286e7e49ce7142b9d23bad
