hide ep4 download file until the morn

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -35,7 +35,7 @@ episodes:
     transcript_file: transcript03-back-it-up
   - name: Ep4—Metadata Meta-awareness
     embed_link: 
-    download_link: https://audio.simplecast.com/71a35e18.mp3
+#    download_link: https://audio.simplecast.com/71a35e18.mp3
     exercises_link: http://preservethispodcast.org/assets/PreserveThisPodcast_Zine_Online.pdf#page=12
     transcript_file: transcript04-metadata-meta-awareness
 
