update ep5 download and embed links

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -38,9 +38,9 @@ episodes:
     download_link: https://audio.simplecast.com/71a35e18.mp3
     exercises_link: http://preservethispodcast.org/assets/PreserveThisPodcast_Zine_Online.pdf#page=12
     transcript_file: transcript04-metadata-meta-awareness
-  - name: Ep5—RSS, whatta mess: Constant Vigilance
-    embed_link: 
-    download_link: 
+  - name: Ep5—RSS Resuscitations
+    embed_link: https://embed.simplecast.com/f0c9969e
+    download_link: https://audio.simplecast.com/f0c9969e.mp3
     exercises_link:
     transcript_file: transcript05-rss-whatta-mess
 
