--- a/_data/content.yml
+++ b/_data/content.yml
@@ -38,11 +38,11 @@ episodes:
     download_link: https://audio.simplecast.com/71a35e18.mp3
     exercises_link: http://preservethispodcast.org/assets/PreserveThisPodcast_Zine_Online.pdf#page=12
     transcript_file: transcript04-metadata-meta-awareness
-  #- name: Ep5—RSS Resuscitations
-  #  embed_link: https://embed.simplecast.com/f0c9969e
-  #  download_link: https://audio.simplecast.com/f0c9969e.mp3
-  #  exercises_link:
-  #  transcript_file: transcript05-rss-whatta-mess
+  - name: Ep5—RSS Resuscitations
+    embed_link: https://embed.simplecast.com/f0c9969e
+    download_link: https://audio.simplecast.com/f0c9969e.mp3
+    exercises_link:
+    transcript_file: transcript05-rss-resuscitations
 
 #   - name: Prepare your Files for Archiving
 #     embed_link: https://embed.radiopublic.com/e?if=SongExploder&ge=s1!ff980151529d68e71f286e7e49ce7142b9d23bad
