add URL to RhizomeDC event

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -74,7 +74,7 @@ events:
   - name: "Rhizome DC"
     when: "6/23/2019"
     where: "Washington, D.C."
-    url: "http://preservethispodcast.org/404tba.html"
+    url: "https://withfriends.co/event/1674308/"
   - name: "Center for Documentary Studies Workshop"
     when: "9/14/2019"
     where: "Durham, NC"
