--- a/_data/content.yml
+++ b/_data/content.yml
@@ -34,7 +34,7 @@ episodes:
     exercises_link: http://preservethispodcast.org/assets/PreserveThisPodcast_Zine_Online.pdf#page=10
     transcript_file: transcript03-back-it-up
   - name: Ep4—Metadata Meta-awareness
-    embed_link: https://embed.radiopublic.com/e?if=preserve-this-podcast-WDJY3A&ge=s1!b3335c5c7b8a03c28400e85d7c610d97f95aa856 
+    embed_link: https://embed.radiopublic.com/e?if=preserve-this-podcast-WDJY3A&ge=s1!b3335c5c7b8a03c28400e85d7c610d97f95aa856
     download_link: https://audio.simplecast.com/71a35e18.mp3
     exercises_link: http://preservethispodcast.org/assets/PreserveThisPodcast_Zine_Online.pdf#page=12
     transcript_file: transcript04-metadata-meta-awareness
@@ -70,7 +70,7 @@ events:
   - name: "ALA Annual Conference"
     when: "6/20 - 6/25/2019"
     where: "Washington, D.C."
-    url: "http://www.ala.org/conferencesevents/annual-conference"
+    url: "https://www.eventscribe.com/2019/ALA-Annual/fsPopup.asp?Mode=presInfo&PresentationID=496289"
   - name: "Rhizome DC"
     when: "6/23/2019"
     where: "Washington, D.C."
