--- a/_data/content.yml
+++ b/_data/content.yml
@@ -59,8 +59,12 @@ events:
     when: "6/6/2019"
     where: "METRO 599 11th Ave, NYC"
     url: "https://www.eventbrite.com/e/who-owns-your-content-a-look-at-podcaster-rights-tickets-59491509707"
+  - name: "The Labs at DC Public Library"
+    when: "6/21/2019"
+    where: "Washington, D.C."
+    url: "https://app.acuityscheduling.com/schedule.php?owner=11905149&appointmentType=10170398"
   - name: "ALA Annual Conference"
-    when: "6/20 - 6/25/2019"
+    when: "6/22/2019"
     where: "Washington, D.C."
     url: "https://www.eventscribe.com/2019/ALA-Annual/fsPopup.asp?Mode=presInfo&PresentationID=496289"
   - name: "Rhizome DC"
