--- a/_data/content.yml
+++ b/_data/content.yml
@@ -51,18 +51,6 @@ episodes:
 #     transcript_file:
 
 events:
-  - name: "The Labs at DC Public Library"
-    when: "6/21/2019"
-    where: "Washington, D.C."
-    url: "https://app.acuityscheduling.com/schedule.php?owner=11905149&appointmentType=10170398"
-  - name: "ALA Annual Conference"
-    when: "6/22/2019"
-    where: "Washington, D.C."
-    url: "https://www.eventscribe.com/2019/ALA-Annual/fsPopup.asp?Mode=presInfo&PresentationID=496289"
-  - name: "Rhizome DC"
-    when: "6/23/2019"
-    where: "Washington, D.C."
-    url: "https://withfriends.co/event/1674308/"
   - name: "Podcast Movement"
     when: "8/13-16/2019"
     where: "Orlando, FL"
@@ -70,6 +58,14 @@ events:
   - name: "Center for Documentary Studies Workshop"
     when: "9/14/2019"
     where: "Durham, NC"
+    url: "http://preservethispodcast.org/404tba.html"
+  - name: "DLF Forum 2019"
+    when: "10/13-17/2019"
+    where: "Tampa, FL"
+    url: "https://forum2019.diglib.org/"
+  - name: "PRX Podcast Garage"
+    when: "10/19/2019"
+    where: "Boston, MA"
     url: "http://preservethispodcast.org/404tba.html"
   - name: "House of Pod"
     when: "11/9/2019"
@@ -137,3 +133,15 @@ past_events:
     when: "6/6/2019"
     where: "METRO 599 11th Ave, NYC"
     url: "https://www.eventbrite.com/e/who-owns-your-content-a-look-at-podcaster-rights-tickets-59491509707"
+  - name: "The Labs at DC Public Library"
+    when: "6/21/2019"
+    where: "Washington, D.C."
+    url: "https://app.acuityscheduling.com/schedule.php?owner=11905149&appointmentType=10170398"
+  - name: "ALA Annual Conference"
+    when: "6/22/2019"
+    where: "Washington, D.C."
+    url: "https://www.eventscribe.com/2019/ALA-Annual/fsPopup.asp?Mode=presInfo&PresentationID=496289"
+  - name: "Rhizome DC"
+    when: "6/23/2019"
+    where: "Washington, D.C."
+    url: "https://withfriends.co/event/1674308/"
