Add CDS eventbrite url. Add Discover Pods PR

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -70,7 +70,7 @@ events:
   - name: "Center for Documentary Studies Workshop"
     when: "9/14/2019"
     where: "Durham, NC"
-    url: "http://preservethispodcast.org/404tba.html"
+    url: "https://www.eventbrite.com/e/its-the-year-2039-wheres-your-podcast-a-preserve-this-podcast-workshop-tickets-65539314855"
   - name: "DLF Forum 2019"
     when: "10/13-17/2019"
     where: "Tampa, FL"
