--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,9 @@ title:          Preserve This Podcast
 email:          podcast@metro.org
 description:    "Preserve This Podcast is an Andrew W. Mellon grant-funded project hosted by the Metropolitan New York Library Council (METRO) to help podcasters protect their work against the threats of digital decay."
 subtitle:       "A podcast about saving your podcast."
-url:            http://preservethispodcast.org
+url:            http://preservethispodcast.org/
 language:       en-us
-author:         podPotato
+author:         PreserveThisPodcast
 copyright:      "CC BY 4.0"
 
 feed:
