update events on content.yml. Add Bubbler, archive PM

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -51,26 +51,15 @@ episodes:
 #     transcript_file:
 
 events:
-  - name: "[Podcast Movement] The State of the Indie"
-    when: "8/13/2019"
-    where: "Orlando, FL"
-    url: "https://embed.pheedloop.com/pm19/site/sessions/?id=Izhlxp"
-  - name: "[Podcast Movement] Get Paid to Podcast: The Next Frontier"
-    when: "8/13/2019"
-    where: "Orlando, FL"
-    url: "https://embed.pheedloop.com/pm19/site/sessions/?id=saPtnw"
-  - name: "[Podcast Movement] It’s the year 2039. Where’s your podcast? (A Preserve This Podcast workshop)"
-    when: "8/15/2019"
-    where: "Orlando, FL"
-    url: "https://embed.pheedloop.com/pm19/site/sessions/?event=pm19&section=9071&id=ZhMQUK"
-  - name: "[Podcast Movement] Goldfish Tank (Sharks are So Scary!)"
-    when: "8/15/2019"
-    where: "Orlando, FL"
-    url: "https://embed.pheedloop.com/pm19/site/sessions/?id=OOcAbX"
+
   - name: "Center for Documentary Studies Workshop"
     when: "9/14/2019"
     where: "Durham, NC"
     url: "https://www.eventbrite.com/e/its-the-year-2039-wheres-your-podcast-a-preserve-this-podcast-workshop-tickets-65539314855"
+  - name: "The Bubbler at Madison Public Library"
+    when: "9/21/2019"
+    where: "Madison, WI"
+    url: "https://www.eventbrite.com/e/its-the-year-2039-wheres-your-podcast-a-preserve-this-podcast-workshop-tickets-69882447281"
   - name: "DLF Forum 2019"
     when: "10/13-17/2019"
     where: "Tampa, FL"
@@ -85,6 +74,7 @@ events:
     url: "https://www.eventbrite.com/e/its-the-year-2039-wheres-your-podcast-a-preserve-this-podcast-workshop-tickets-65529615845"
 
 past_events:
+  
   - name: "Sound Education"
     when: "11/2 + 11/3/2018"
     where: "Cambridge, MA"
@@ -157,3 +147,19 @@ past_events:
     when: "6/23/2019"
     where: "Washington, D.C."
     url: "https://withfriends.co/event/1674308/"
+  - name: "[Podcast Movement] The State of the Indie"
+    when: "8/13/2019"
+    where: "Orlando, FL"
+    url: "https://embed.pheedloop.com/pm19/site/sessions/?id=Izhlxp"
+  - name: "[Podcast Movement] Get Paid to Podcast: The Next Frontier"
+    when: "8/13/2019"
+    where: "Orlando, FL"
+    url: "https://embed.pheedloop.com/pm19/site/sessions/?id=saPtnw"
+  - name: "[Podcast Movement] It’s the year 2039. Where’s your podcast? (A Preserve This Podcast workshop)"
+    when: "8/15/2019"
+    where: "Orlando, FL"
+    url: "https://embed.pheedloop.com/pm19/site/sessions/?event=pm19&section=9071&id=ZhMQUK"
+  - name: "[Podcast Movement] Goldfish Tank (Sharks are So Scary!)"
+    when: "8/15/2019"
+    where: "Orlando, FL"
+    url: "https://embed.pheedloop.com/pm19/site/sessions/?id=OOcAbX"
