--- a/_data/content.yml
+++ b/_data/content.yml
@@ -64,6 +64,10 @@ events:
     when: "10/13-17/2019"
     where: "Tampa, FL"
     url: "https://forum2019.diglib.org/"
+  - name: "Audio Engineering Society New York 2019"
+    when: "10/18/2019"
+    where: "New York, NY"
+    url: "http://www.aes.org/events/147/archiving/?ID=6861"
   - name: "PRX Podcast Garage"
     when: "10/19/2019"
     where: "Boston, MA"
@@ -74,7 +78,7 @@ events:
     url: "https://www.eventbrite.com/e/its-the-year-2039-wheres-your-podcast-a-preserve-this-podcast-workshop-tickets-65529615845"
 
 past_events:
-  
+
   - name: "Sound Education"
     when: "11/2 + 11/3/2018"
     where: "Cambridge, MA"
