--- a/_data/content.yml
+++ b/_data/content.yml
@@ -55,14 +55,16 @@ events:
     when: "11/9/2019"
     where: "Denver, CO"
     url: "https://www.eventbrite.com/e/its-the-year-2039-wheres-your-podcast-a-preserve-this-podcast-workshop-tickets-65529615845"
-  - name: "Preserve This Podcast 2-Part Webinar"
-    when: "11/20-21/2019"
-    where: "On your computer/phone"
-    url: "https://www.eventbrite.com/e/its-the-year-2039-wheres-your-podcast-a-preserve-this-podcast-webinar-tickets-74834192083"
   - name: "ALCTS Webinar"
     when: "12/04/2019"
     where: "On your computer/phone"
     url: "http://www.ala.org/alcts/confevents/upcoming/webinar/120419"
+  - name: "Preserve This Podcast 2-Part Webinar"
+    when: "01/23-1/24/2020"
+    where: "On your computer/phone"
+    url: "https://www.eventbrite.com/e/its-the-year-2039-wheres-your-podcast-a-preserve-this-podcast-webinar-tickets-74834192083"
+
+
 
 past_events:
 
