--- a/_data/content.yml
+++ b/_data/content.yml
@@ -25,6 +25,7 @@ episodes:
     transcript_file: trancript01-time-to-take-notice
   - name: Ep2—Get Organized
     embed_link: https://embed.radiopublic.com/e?if=preserve-this-podcast-WDJY3A&ge=s1!8656cc15c4c5d699b0d9e755db6853b3efa79ee2
+    download_link: https://audio.simplecast.com/c423d600.mp3
     exercises_link: http://preservethispodcast.org/assets/PreserveThisPodcast_Zine_Online.pdf#page=5
     transcript_file: transcript02-get-organized
   - name: Ep3—Back it up
