--- a/_data/content.yml
+++ b/_data/content.yml
@@ -52,10 +52,10 @@ episodes:
 
 events:
 
-  - name: "Preserve This Podcast 2-Part Webinar"
-    when: "01/23-1/24/2020"
+  - name: "iSchool @ UW-Madison Continuing Ed"
+    when: "Spring 2020"
     where: "On your computer/phone"
-    url: "https://www.eventbrite.com/e/its-the-year-2039-wheres-your-podcast-a-preserve-this-podcast-webinar-tickets-74834192083"
+    url: "https://ischool.wisc.edu/continuing-education/"
 
 
 
@@ -177,3 +177,7 @@ past_events:
     when: "12/04/2019"
     where: "On your computer/phone"
     url: "http://www.ala.org/alcts/confevents/upcoming/webinar/120419"
+  - name: "Preserve This Podcast 2-Part Webinar"
+    when: "01/23-1/24/2020"
+    where: "On your computer/phone"
+    url: "https://www.eventbrite.com/e/its-the-year-2039-wheres-your-podcast-a-preserve-this-podcast-webinar-tickets-74834192083"
